# Regime-Adaptive-Agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  DEMO.md  DEPLOY.md  Dockerfile  Makefile  PLAN.md  README.md  ROADMAP.md  SUBMISSION.md  docker-compose.yml  package.json  pyproject.toml  render.yaml  vercel.json
.github/workflows/: keepalive.yml  lint.yml  tests.yml
config/: strategy.md
docs/: AVAX_DELTA.md  architecture.excalidraw  autotrade_plan.md  bnb_hackathon_plan.md  bnb_strategy_decision.md  build_audit.md  checkings.md  cmc_agent_hub.md  cmc_candles.md  cmc_enablement.md  cmc_pnl_ab.md  deploy_dashboard.md  erc8183_agent_commerce.md  findings.md  findings_artifact_diff.md  implementation_audit.md  live_arming_runbook.md  mcp_wiring.md  monetization_plan.md  operations.md  remediation_plan.md  strategy.md  strategy_campaign.md  strategy_playbook.md  strategy_spec.md  strategy_testing_log.md  strategy_validation_runbook.md  track1_alignment.md  twak_integration.md  twak_live_runbook.md  x402_receipts.md
docs/adr/: 0001-fade-vs-follow.md  0002-poi-engines.md  0003-data-cache.md  0004-engine-perf.md  0005-rr-floor.md
docs/archive/: README_ictbot_upstream.md  architecture_ictbot_upstream.excalidraw  architecture_ictbot_upstream.md
infra/: Dockerfile.dashboard  prometheus.yml  prometheus_alerts.yaml
infra/grafana/dashboards/: ictbot.json
infra/seed/: allocator_journal.jsonl  allocator_state.json  cmc_mcp_usage.json  commerce_jobs.jsonl  market_intel.json  strategy_gates.json  strategy_stability.json  x402_receipts.json  x402_server_jobs.jsonl
scripts/: ab_regime.py  archive_journal.py  arm_check.py  avax_demo.py  avax_derisk.py  avax_record_heartbeat.py  build_web.sh  check_binance_keys.sh  check_env_example.py  cmc_check.py  cmc_pnl_curve.py  cmc_stream.py  cmc_stream.sh  contest_readiness.py  daily_floor.sh  dd_watch.sh  deploy_dashboard.sh  diagnose_live_pnl.py  edge_check.py  erc8183_create_job.py  erc8183_demo_client.py  erc8183_serve.py  export_snapshot.py  forward_promote.py  forward_tick.sh  forward_tracks.sh  gen_architecture.py  gen_daily_pnl_journal.py  heartbeat_check.py  live_swap_smoke.py  live_tick.sh  mcp_check.py  playbook_status.py  probe_agent_hub.py  probe_cmc.py  register_agent.py  remint_identity.py  report_forward.py  run_allocator.py  seed_rotation_demo.py  (+19 more)
src/ictbot/: __init__.py  __main__.py  settings.py
src/ictbot/agent/: __init__.py  commerce.py  erc8004_client.py  heartbeat_journal.py  identity.py  rationale.py  regime_report.py  strategy_spec.py
src/ictbot/api/: __init__.py  app.py  commerce_controls.py  controls.py  onchain.py  reads.py  schemas.py  x402_server.py
src/ictbot/cli/: __main__.py  journal_cmd.py  shadow_report.py
src/ictbot/data/: binance.py  cache.py  cmc.py  cmc_agent_hub.py  cmc_client.py  cmc_intel.py  cmc_onchain.py  cmc_sectors.py  cmc_stream_store.py  delta.py  exchange.py  factory.py  forex_factory.py  replay.py  x402_cmc.py
src/ictbot/engine/: acceptance.py  backtest.py  bt_curve.py  compare.py  sizing.py  sweep.py  wfo.py  wfo_replay.py
src/ictbot/exec/: binance_live.py  broker.py  bsc_spot_live.py  delta_live.py  factory.py  orders.py  paper.py  twak_client.py
src/ictbot/indicators/: atr.py  bands.py  bias_slope.py  bias_sma.py  channels.py  delta.py  fvg.py  liquidity.py  mfvg_retest.py  mitigation.py  mss.py  poi_min_max.py  poi_order_block.py  regime.py  risk.py  structure.py  tick.py
src/ictbot/notify/: news_alert.py  signal_check.py  telegram.py  tg_confirm.py
src/ictbot/orchestrator/: analyzer.py  router.py  scanner.py  shadow_router.py
src/ictbot/portfolio/: account.py  caps.py  journal.py
src/ictbot/runtime/: active_tokens.py  health_server.py  heartbeat.py  kill_switch.py  logger.py  metrics.py  news.py  pause.py  performance.py  session_gate.py  sessions.py  signal_memory.py  stability_grades.py  strategy_select.py  verdicts.py
src/ictbot/strategy/: base.py  ict_pro_max.py  macro_align.py  (+9 more)
tests/: conftest.py  test_acceptance_gate.py  test_active_tokens.py  test_adapter_breakout.py  test_adapter_dual_momentum.py  test_adapter_grid.py  test_adapter_mean_reversion.py  test_adapter_momentum.py  test_adapter_momentum_adaptive.py  test_adapter_momentum_cmc.py  test_adapter_momentum_fast.py  test_adapter_rotation.py  test_agent.py  test_allocator_active_subset.py  test_analyzer.py  test_analyzer_e2e.py  test_analyzer_per_pair_rr.py  test_api_commerce_control.py  test_api_controls_strategy.py  test_api_controls_tokens.py  test_api_reads.py  test_app_import.py  test_atr.py  test_atr_grid.py  test_audit_regressions.py  test_avax_x402_port.py  test_backtest.py  test_backtest_searchsorted.py  test_bands.py  test_bars_needed.py  test_bias.py  test_binance_live_broker.py  test_binance_pagination.py  test_bsc_spot_live.py  test_bt_curve.py  test_cache_replay.py  test_campaign_properties.py  test_canonical_flow_e2e.py  test_canonical_flow_killswitch.py  test_cap_series_enhanced.py  (+135 more)
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/public/: config.json  snapshot.json
web/src/: App.tsx  index.css  main.tsx
(+60 files in other folders)
